--- a/Frontpage/frontpage.html
+++ b/Frontpage/frontpage.html
@@ -1,11 +1,105 @@
 <!DOCTYPE html>
-<html lang="iy">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<!--Inizio Header-->
+<header>
+    <!--Form per la ricerca-->
+    <form name="searchForm" method="get">
+        <!--Immagine per il submit, va a sinistra del textbox-->
+        <label></label>
+        <input type="image" id="submit" src="lente.png" alt="Clicca qui per per cercare">
+        <!--Textbox per ricerca-->
+        <label></label>
+        <input type="text" id="search" name="search" value="" maxlength="50" required placeholder="Cerca . . ." size="50"/>
+    </form>
 
+    <!--Link a bottone-->
+    <a id="btnFiltri" href="filtri.html">Filtri</a>
+    <!--Filtri è vicino al textbox, gli altri sono raggruppati a sinistra-->
+    <a id="btn_Iscriviti" href="iscriviti.html">Iscriviti</a>
+    <a id="btn_Accedi" href="accedi.html">Accedi</a>
+</header>
+<!--Fine Header-->
+<!--Inizio Main-->
+<main id="main">
+    <!--Immagine principale-->
+    <div id="box_banner">
+        <img id="banner" src="banner.jpg" alt="Banner dell'evento">
+    </div>
 
+    <!--Colonna sinistra-->
+    <div id="colonna_sx">
+        <h1>Nome evento</h1>
+        <p id="descrizione">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+        <h2>Data e ora</h2>
+        <p id="data">Lun, 1 Gen 2024 09:00 - 13:00 CET</p>
+
+        <h2>Location</h2>
+        <a id="location" href="mappa.html">Via Giuseppe Saragat, 1, 44124 Ferrara FE</a>
+
+        <h2>Organizzato da</h2>
+        <a id="organizzatore" href="profilo_org.html">Dr Nerina Ramlakhan</a>
+
+        <h2>Infromazioni sull'evento</h2>
+        <p id="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <!--Immagine secondaria-->
+        <div id="box_imm2">
+            <img id="imm2" src="imm2.jpg" alt="Immagine secondaria">
+        </div>
+
+        <a id="segnala" href="segnala.html">Segnala questo evento</a>
+
+    </div>
+
+    <!--Colonna destra-->
+    <div id="colonna_dx">
+        <!--Box con prezzo e link biglietteria-->
+        <div id="box_bigl">
+            <h2 id="prezzo">9 - 18€</h2>
+            <a id="btn_biglietteria" href="biglietteria.html">COMPRA ORA</a>
+        </div>
+
+        <!--Link vari-->
+        <p id="btn_segui">Segui</p>
+        <a id="btn_chat" href="chat.html">Chat</a>
+        <a id="btn_live" href="live.html">Live</a>
+        <a id="btn_recensioni" href="recensioni.html">Recensioni</a>
+
+        <!--Box video-->
+        <div id="video"><!--QUI VA IL VIDEO--></div>
+
+        <!--Box sondaggio-->
+        <div id="sondaggio"><!--QUI VA IL SONDAGGIO (FORM???)--></div>
+    </div>
+    
+    <!--Link a inizio pagina-->
+    <a href="header"><img src="freccia.jpg" alt="Clicca qui per tornare in cima alla pagina"></a>
+
+</main>
+<!--Fine Main-->
+<!--Inizio Footer-->
+<footer>
+    <!--Link da raggruppare in 3 gruppi da 3-->
+    <!--Prima colonna-->
+    <a href="home.html">Home Page</a>
+    <a href="faq.html">FAQs</a>
+    <a href="sponsor.html">Sponsorizzazioni</a>
+    <!--Seconda colonna-->
+    <a href="user_sup.html">Supporto utente</a>
+    <a href="tec_sup.html">Supporto tecnico</a>
+    <a href="segnala.html">Segnala questo evento</a>
+    <!--Terza colonna-->
+    <a href="privacy.html">Privacy</a>
+    <a href="cookies.html">Cookies</a>
+    <a href="terms.html">Termini di utilizzo</a>
+</footer>
+<!--Fine Footer-->
 </body>
 </html>
