--- a/Frontpage/frontpage.html
+++ b/Frontpage/frontpage.html
@@ -19,10 +19,11 @@
     </form>
 
     <!--Link a bottone-->
-    <a id="btnFiltri" href="filtri.html">Filtri</a>
+    <!--Mettili detro ad <ul> che a sua volta contine dei <li> per vedere il css -M.P. -->
+    <a id="btnFiltri" class="button" href="filtri.html">Filtri</a>
     <!--Filtri è vicino al textbox, gli altri sono raggruppati a sinistra-->
-    <a id="btn_Iscriviti" href="iscriviti.html">Iscriviti</a>
-    <a id="btn_Accedi" href="accedi.html">Accedi</a>
+    <a id="btn_Iscriviti" class="button" href="iscriviti.html">Iscriviti</a>
+    <a id="btn_Accedi" class="button" href="accedi.html">Accedi</a>
 </header>
 <!--Fine Header-->
 <!--Inizio Main-->
