--- a/Frontpage/frontpage.html
+++ b/Frontpage/frontpage.html
@@ -10,7 +10,7 @@
 <header>
     <nav>
         <ul class="nav">
-            <li class="searchbar clearfix">
+            <li class="searchbar">
                 <!--Form per la ricerca-->
                 <form name="searchForm" method="get">
                     <!--Immagine per il submit, va a sinistra del textbox-->
@@ -23,8 +23,10 @@
             </li>
             <li class="items">
                 <!--Link a bottone-->
-                <ul class="itemlist">
+                <ul class="filtri">
                     <li><a id="btnFiltri" class="button" href="filtri.html">Filtri</a></li>
+                </ul>
+                <ul class="itemlist">
                     <!--Filtri è vicino al textbox, gli altri sono raggruppati a sinistra-->
                     <li><a id="btn_Iscriviti" class="button" href="iscriviti.html">Iscriviti</a></li>
                     <li><a id="btn_Accedi"  class="button" href="accedi.html">Accedi</a></li>
