--- a/Frontpage/frontpage.html
+++ b/Frontpage/frontpage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <!--Inizio Header-->
-<header>
+<header id="header">
     <nav>
         <ul class="nav">
             <li class="searchbar">
@@ -37,14 +37,14 @@
 </header>
 <!--Fine Header-->
 <!--Inizio Main-->
-<main id="main">
+<main id="main" class="clearfix">
     <!--Immagine principale-->
     <div id="box_banner">
-        <img id="banner" src="banner.jpg" alt="Banner dell'evento">
+        <img id="banner" src="images/banner.jpg" alt="Banner dell'evento">
     </div>
 
     <!--Colonna sinistra-->
-    <div id="colonna_sx">
+    <section id="colonna_sx">
         <h1>Nome evento</h1>
         <p id="descrizione" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <br>
@@ -72,33 +72,43 @@
         </div>
         <br>
         <a id="segnala" href="segnala.html">Segnala questo evento</a>
-
-    </div>
+    </section>
 
     <!--Colonna destra-->
-    <div id="colonna_dx">
+    <aside id="colonna_dx">
         <!--Box con prezzo e link biglietteria-->
         <div id="box_bigl">
             <h2 id="prezzo">9 - 18€</h2>
-            <a id="btn_biglietteria" href="biglietteria.html">COMPRA ORA</a>
+            <div id="btn_biglietteria">
+                <a href="biglietteria.html">COMPRA ORA</a>
+            </div>
         </div>
 
         <!--Link vari-->
-        <p id="btn_segui">Segui</p>
-        <a id="btn_chat" href="chat.html">Chat</a>
-        <a id="btn_live" href="live.html">Live</a>
-        <a id="btn_recensioni" href="recensioni.html">Recensioni</a>
+        <nav id="nav_dx">
+            <ul>
+                <li>
+                    <ul class="link_dx">
+                        <li><p id="btn_segui" class="buttondx">Segui</p></li>
+                        <li class="chat_live"><a id="btn_chat" class="buttondx" href="chat.html">Chat</a></li>
+                        <li class="chat_live"><a id="btn_live" class="buttondx" href="live.html">Live</a></li>
+                    </ul>
+                </li>
+                <li id="btn_recensioni"><a class="buttondx" href="recensioni.html">Recensioni</a></li>
+            </ul>
+        </nav>
 
         <!--Box video-->
         <div id="video"><!--QUI VA IL VIDEO--></div>
 
         <!--Box sondaggio-->
         <div id="sondaggio"><!--QUI VA IL SONDAGGIO (FORM???)--></div>
-    </div>
+    </aside>
     
     <!--Link a inizio pagina-->
-    <a href="header"><img src="images/freccia.jpg" alt="Clicca qui per tornare in cima alla pagina"></a>
-
+    <div id="torna_su">
+        <a href="#header"><img id="freccia" src="images/freccia.jpg" alt="Clicca qui per tornare in cima alla pagina"></a>
+    </div>
 </main>
 <!--Fine Main-->
 <!--Inizio Footer-->
