--- a/Frontpage/frontpage.html
+++ b/Frontpage/frontpage.html
@@ -95,6 +95,8 @@
                     </ul>
                 </li>
                 <li id="btn_recensioni"><a class="buttondx" href="recensioni.html">Recensioni</a></li>
+                <li id="btn_sondaggiPre"><a class="buttondx" href="http://localhost:8080/api/sondaggioPre">Sondaggio pre-evento</a></li>
+                <li id="btn_sondaggiPost"><a class="buttondx" href="http://localhost:8080/api/sondaggioPost">Sondaggio post-evento</a></li>
             </ul>
         </nav>
 
